# haskell-telegram-bot

./: .gitignore  CHANGELOG.md  LICENSE  README.md  haskell-telegram-bot.cabal
app/: Bot.hs  TelegramTypes.hs  Update.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
tests/: TestBot.hs
