cabal-version:      2.4
name:               haskell-telegram-bot
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             surafel_fikru, yeabsira derese, kenenisa alemayehu, leul wujira, yeabsira nigusse
maintainer:         surafelfikru76@gmail.com,
                    yeabsira.derese@singularitynet.io,s
                    kenenisa.Alemayehu@singularitynet.io,
                    leul.wujira@singularitynet.io,
                    yeabsira.nigusse@singularitynet.io,


-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

-- executable haskell-telegram-bot
--     main-is:

--     -- Modules included in this executable, other than Main.
--     other-modules: Update,
--                    Bot


--     -- LANGUAGE extensions used by modules in this package.
--     -- other-extensions:
--     build-depends:    base ^>=4.16.4.0
--     hs-source-dirs:   app
--     default-language: Haskell2010

library
  exposed-modules: Update,
                   Bot,
                   TelegramTypes,
                   TestBot
  build-depends:    base ^>=4.16.4.0,
                    containers,
                    aeson,
                    vector,
                    network-uri,
                    http-conduit,
                    bytestring,
                    lens,
                    HUnit,
                    text
  hs-source-dirs:   app, tests
  default-language: Haskell2010